@@ -12,6 +12,7 @@ ADD `mode_ln` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lp` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ls` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lt` enum('Y','N') NOT NULL default 'N',
+ADD `mode_lz` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ub` enum('Y','N') NOT NULL default 'N',
 ADD `mode_um` enum('Y','N') NOT NULL default 'N',
 ADD `mode_un` enum('Y','N') NOT NULL default 'N',
