@@ -7,6 +7,7 @@ Additions
 n/a
 
 Changes
+09/02/19 r244 Fixed Plexus3 TOPIC, KILL, NICK, EOB handling and chanmode +z
 09/02/17 r242 Fixed handling of Plexus3 UID message in TS6 mode
 09/02/17 r242 Added missing TMODE implementation in Plexus3
 09/02/17 r241 Fixed JOIN message handling in Plexus3
